--- a/styles/fourth.css
+++ b/styles/fourth.css
@@ -1,9 +1,42 @@
 .stack-container {
   display: flex;
   align-items: center;
-  width: 75%;
   justify-self: center;
   align-self: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .stack-container {
+    width: 75%;
+  }
 }
 
 .stack-inner-container {
@@ -17,7 +50,7 @@
 
 @media only screen and (max-width: 575.98px) {
   .stack-inner-container {
-    grid-template-rows: 40vh 150vh;
+    grid-template-rows: 32vh 150vh;
   }
 }
 
@@ -55,7 +88,7 @@
 
 @media only screen and (max-width: 575.98px) {
   .stack-heading {
-    grid-template-rows: 10vh 24vh;
+    grid-template-rows: 8vh 18vh;
     width: 100%;
   }
 }
@@ -89,25 +122,58 @@
 }
 
 .stack-heading .sub-title {
-  font-family: "Roboto Mono";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0.04em;
-  text-align: left;
   color: #DCDCDC;
   text-transform: uppercase;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .stack-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .stack-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 1.13rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.04em;
+    text-align: left;
+  }
 }
 
 .stack-heading .title {
-  font-family: "Roboto Mono";
-  font-size: 58px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 79px;
-  letter-spacing: -0.07em;
-  text-align: left;
   color: #F4F4F4;
   /* Small devices (landscape phones, 576px and up) */
   /* // Medium devices (tablets, 768px and up) */
@@ -117,7 +183,13 @@
 
 @media only screen and (max-width: 575.98px) {
   .stack-heading .title {
-    width: 100%;
+    font-family: "Roboto Mono";
+    font-size: 2.38rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
@@ -141,7 +213,13 @@
 
 @media only screen and (min-width: 1200px) {
   .stack-heading .title {
-    width: 70%;
+    font-family: "Roboto Mono";
+    font-size: 3.63rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 79px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
