--- a/styles/third.css
+++ b/styles/third.css
@@ -1,9 +1,42 @@
 .services-container {
   display: flex;
   align-items: center;
-  width: 84%;
   justify-self: center;
   align-self: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services-container {
+    width: 75%;
+  }
 }
 
 .services-inner-container {
