--- a/styles/index.css
+++ b/styles/index.css
@@ -795,7 +795,7 @@ button, .nav-link-container button {
 
 @media only screen and (max-width: 575.98px) {
   .second-section {
-    grid-template-rows: 290vh 150vh 250vh 200vh 70vh;
+    grid-template-rows: 290vh 150vh 200vh 200vh 70vh;
   }
 }
 
@@ -1604,9 +1604,42 @@ button, .nav-link-container button {
 .services-container {
   display: flex;
   align-items: center;
-  width: 84%;
   justify-self: center;
   align-self: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .services-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .services-container {
+    width: 75%;
+  }
 }
 
 .services-inner-container {
@@ -2105,9 +2138,42 @@ button, .nav-link-container button {
 .stack-container {
   display: flex;
   align-items: center;
-  width: 75%;
   justify-self: center;
   align-self: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .stack-container {
+    width: 84%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .stack-container {
+    width: 75%;
+  }
 }
 
 .stack-inner-container {
@@ -2121,7 +2187,7 @@ button, .nav-link-container button {
 
 @media only screen and (max-width: 575.98px) {
   .stack-inner-container {
-    grid-template-rows: 40vh 150vh;
+    grid-template-rows: 32vh 150vh;
   }
 }
 
@@ -2159,7 +2225,7 @@ button, .nav-link-container button {
 
 @media only screen and (max-width: 575.98px) {
   .stack-heading {
-    grid-template-rows: 10vh 24vh;
+    grid-template-rows: 8vh 18vh;
     width: 100%;
   }
 }
@@ -2193,25 +2259,58 @@ button, .nav-link-container button {
 }
 
 .stack-heading .sub-title {
-  font-family: "Roboto Mono";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0.04em;
-  text-align: left;
   color: #DCDCDC;
   text-transform: uppercase;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .stack-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .stack-heading .sub-title {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .stack-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 1.13rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.04em;
+    text-align: left;
+  }
 }
 
 .stack-heading .title {
-  font-family: "Roboto Mono";
-  font-size: 58px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 79px;
-  letter-spacing: -0.07em;
-  text-align: left;
   color: #F4F4F4;
   /* Small devices (landscape phones, 576px and up) */
   /* // Medium devices (tablets, 768px and up) */
@@ -2221,7 +2320,13 @@ button, .nav-link-container button {
 
 @media only screen and (max-width: 575.98px) {
   .stack-heading .title {
-    width: 100%;
+    font-family: "Roboto Mono";
+    font-size: 2.38rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
@@ -2245,7 +2350,13 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 1200px) {
   .stack-heading .title {
-    width: 70%;
+    font-family: "Roboto Mono";
+    font-size: 3.63rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 79px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
