--- a/scss/third.scss
+++ b/scss/third.scss
@@ -333,7 +333,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
+    padding-right: 10px;
     & p {
         color: black;
         text-align: center;
@@ -354,7 +354,7 @@
 
     @media only screen and (max-width: 575.98px) {
         & {
-            width: 200px;
+            width: 230px;
         }
     }
 
