--- a/styles/third.css
+++ b/styles/third.css
@@ -326,6 +326,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding-right: 10px;
 }
 
 .service-text p {
@@ -350,7 +351,7 @@
 
 @media only screen and (max-width: 575.98px) {
   .service-list-1 {
-    width: 200px;
+    width: 230px;
   }
 }
 
