--- a/scss/seventh.scss
+++ b/scss/seventh.scss
@@ -3,6 +3,11 @@
         & {
             display: flex;
             flex-direction: column;
+            justify-self: center;
+            align-self: center;
+            justify-content: space-between;
+            height: 170vh;
+
         }
     }
 
@@ -47,7 +52,9 @@ footer {
 
     @media only screen and (max-width: 575.98px) {
         & {
-            grid-template-rows: 150vh 20vh;
+            grid-template-rows: 180vh 30vh;
+            width: 100%;
+            justify-content: center;
         }
     }
 
@@ -116,10 +123,41 @@ footer {
 .footer-logo-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    width: 70%;
     justify-self: center;
     height: 5vh;
+    @media only screen and (max-width: 575.98px) {
+        & {
+            width: 90%;
+        }
+    }
 
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            width: 70%;
+        }
+    }
     & p {
         font-family: "Montserrat", sans-serif;
         font-size: 1.06rem;
@@ -131,6 +169,7 @@ footer {
         color: #373737;
         display: flex;
         align-items: center;
+
     }
 
     & .logo {
@@ -140,16 +179,88 @@ footer {
 }
 
 .footer-icons-container {
-    display: grid;
-    grid-template-columns: 3fr 2fr 1fr 1fr 1fr;
+    @media only screen and (max-width: 575.98px) {
+        & {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            height: 20vh;
+            width: 85%;
+            align-self: center;
+            justify-self: center;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: grid;
+            grid-template-columns: 3fr 2fr 1fr 1fr 1fr;
+        }
+    }
 
 }
 
 .footer-icons {
-    width: 70%;
-    display: flex;
-    justify-self: center;
-    align-self: center;
+
+    @media only screen and (max-width: 575.98px) {
+        & {
+            width: 100%;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            width: 70%;
+            display: flex;
+            justify-self: center;
+            align-self: center;
+        }
+    }
 }
 
 .copyright-container {
@@ -169,6 +280,40 @@ footer {
 
 .footer-inner-icons {
     display: flex;
-    justify-content: space-between;
-    width: 60%;
+
+    @media only screen and (max-width: 575.98px) {
+        & {
+            justify-content: space-between;
+            width: 40%;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            grid-template-rows: 50vh 20vh;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            justify-content: space-between;
+            width: 60%;
+        }
+    }
 }
