--- a/scss/first.scss
+++ b/scss/first.scss
@@ -253,33 +253,34 @@ button {
 
 .first-main-body {
     @include flex(flex, row, center, center);
+
     @media only screen and (max-width: 575.98px) {
         & {
-            height: 150vh;    
+            height: 150vh;
         }
     }
-    
+
     /* Small devices (landscape phones, 576px and up) */
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
             height: 150vh;
         }
     }
-    
+
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
             height: 150vh;
         }
     }
-    
+
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
             height: 150vh;
         }
     }
-    
+
     /* // Extra large devices (large desktops, 1200px and up) */
     @media only screen and (min-width: 1200px) {
         & {
@@ -363,6 +364,85 @@ button {
     grid-column: 3/3;
     justify-content: center;
     width: 35%;
+}
+
+.mobile-device-icon-box {
+
+    @media only screen and (max-width: 575.98px) {
+        & {
+            @include flex(flex, row, null, null);
+            grid-row: 1/2;
+            grid-column: 1/3;
+            justify-content: space-between;
+            width: 70%;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: none;
+        }
+    }
+}
+
+.mobile-device-icon-box-2 {
+
+    @media only screen and (max-width: 575.98px) {
+        & {
+            grid-row: 3/3;
+            grid-column: 3/3;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: none;
+        }
+    }
 }
 
 .first-main-text {
@@ -500,33 +580,34 @@ button {
     & p {
         @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
         @include flex(flex, row, center, null);
+
         @media only screen and (max-width: 575.98px) {
             & {
                 width: 100%;
             }
         }
-    
+
         /* Small devices (landscape phones, 576px and up) */
         @media only screen and (min-width: 576px) and (max-width: 767.98px) {
             & {
                 width: 75%;
             }
         }
-    
+
         /* // Medium devices (tablets, 768px and up) */
         @media only screen and (min-width: 768px) and (max-width: 991.98px) {
             & {
                 width: 75%;
             }
         }
-    
+
         /* Large devices (desktops, 992px and up) */
         @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
             & {
                 @include grid(grid, 10vh 10vh, null);
             }
         }
-    
+
         /* // Extra large devices (large desktops, 1200px and up) */
         @media only screen and (min-width: 1200px) {
             & {
@@ -595,13 +676,14 @@ button {
 .mobile-header-menu-bar {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    height: 4vh;
     align-items: flex-end;
 }
 
 .mobile-inner-header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     justify-self: center;
     align-self: center;
     width: 90%;
@@ -611,6 +693,24 @@ button {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
+
+    & p {
+        font-family: "Montserrat", sans-serif;
+        font-size: 0.94rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 21px;
+        letter-spacing: 0.04em;
+        text-align: left;
+        width: 100%;
+    }
+}
+
+.mobile-inner-header-icon {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100%;
 }
 
 @media only screen and (max-width: 575.98px) {
