--- a/styles/first.css
+++ b/styles/first.css
@@ -423,6 +423,104 @@ button, .nav-link-container button {
   width: 35%;
 }
 
+.mobile-device-icon-box {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .mobile-device-icon-box {
+    display: flex;
+    flex-direction: row;
+    grid-row: 1/2;
+    grid-column: 1/3;
+    justify-content: space-between;
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .mobile-device-icon-box {
+    display: none;
+  }
+}
+
+.mobile-device-icon-box-2 {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .mobile-device-icon-box-2 {
+    grid-row: 3/3;
+    grid-column: 3/3;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .mobile-device-icon-box-2 {
+    display: none;
+  }
+}
+
 .first-main-text {
   display: flex;
   flex-direction: row;
@@ -714,13 +812,14 @@ button, .nav-link-container button {
 .mobile-header-menu-bar {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  height: 4vh;
   align-items: flex-end;
 }
 
 .mobile-inner-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   justify-self: center;
   align-self: center;
   width: 90%;
@@ -730,6 +829,24 @@ button, .nav-link-container button {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
+}
+
+.mobile-header-icon p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.94rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 21px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  width: 100%;
+}
+
+.mobile-inner-header-icon {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  width: 100%;
 }
 
 @media only screen and (max-width: 575.98px) {
