--- a/styles/index.css
+++ b/styles/index.css
@@ -440,6 +440,104 @@ button, .nav-link-container button {
   width: 35%;
 }
 
+.mobile-device-icon-box {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .mobile-device-icon-box {
+    display: flex;
+    flex-direction: row;
+    grid-row: 1/2;
+    grid-column: 1/3;
+    justify-content: space-between;
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .mobile-device-icon-box {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .mobile-device-icon-box {
+    display: none;
+  }
+}
+
+.mobile-device-icon-box-2 {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .mobile-device-icon-box-2 {
+    grid-row: 3/3;
+    grid-column: 3/3;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .mobile-device-icon-box-2 {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 2.81rem;
+    font-style: normal;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .mobile-device-icon-box-2 {
+    display: none;
+  }
+}
+
 .first-main-text {
   display: flex;
   flex-direction: row;
@@ -731,13 +829,14 @@ button, .nav-link-container button {
 .mobile-header-menu-bar {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  height: 4vh;
   align-items: flex-end;
 }
 
 .mobile-inner-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   justify-self: center;
   align-self: center;
   width: 90%;
@@ -747,6 +846,24 @@ button, .nav-link-container button {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
+}
+
+.mobile-header-icon p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.94rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 21px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  width: 100%;
+}
+
+.mobile-inner-header-icon {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  width: 100%;
 }
 
 @media only screen and (max-width: 575.98px) {
@@ -3049,6 +3166,10 @@ button, .nav-link-container button {
   .footer-inner-container {
     display: flex;
     flex-direction: column;
+    justify-self: center;
+    align-self: center;
+    justify-content: space-between;
+    height: 170vh;
   }
 }
 
@@ -3093,7 +3214,9 @@ footer {
 
 @media only screen and (max-width: 575.98px) {
   footer {
-    grid-template-rows: 150vh 20vh;
+    grid-template-rows: 180vh 30vh;
+    width: 100%;
+    justify-content: center;
   }
 }
 
@@ -3156,9 +3279,42 @@ footer {
 .footer-logo-container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  width: 70%;
   justify-self: center;
   height: 5vh;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .footer-logo-container {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .footer-logo-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .footer-logo-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .footer-logo-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-logo-container {
+    width: 70%;
+  }
 }
 
 .footer-logo-container p {
@@ -3180,15 +3336,88 @@ footer {
 }
 
 .footer-icons-container {
-  display: grid;
-  grid-template-columns: 3fr 2fr 1fr 1fr 1fr;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .footer-icons-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 20vh;
+    width: 85%;
+    align-self: center;
+    justify-self: center;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .footer-icons-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .footer-icons-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .footer-icons-container {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-icons-container {
+    display: grid;
+    grid-template-columns: 3fr 2fr 1fr 1fr 1fr;
+  }
 }
 
 .footer-icons {
-  width: 70%;
-  display: flex;
-  justify-self: center;
-  align-self: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .footer-icons {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .footer-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .footer-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .footer-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-icons {
+    width: 70%;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+  }
 }
 
 .copyright-container {
@@ -3208,8 +3437,42 @@ footer {
 
 .footer-inner-icons {
   display: flex;
-  justify-content: space-between;
-  width: 60%;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
+@media only screen and (max-width: 575.98px) {
+  .footer-inner-icons {
+    justify-content: space-between;
+    width: 40%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767.98px) {
+  .footer-inner-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991.98px) {
+  .footer-inner-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+  .footer-inner-icons {
+    grid-template-rows: 50vh 20vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-inner-icons {
+    justify-content: space-between;
+    width: 60%;
+  }
 }
 
 .App-container {
@@ -3218,7 +3481,7 @@ footer {
 
 @media only screen and (max-width: 575.98px) {
   .App-container {
-    grid-template-rows: 13vh 150vh 850vh 200vh;
+    grid-template-rows: 13vh 150vh 850vh 220vh;
   }
 }
 
